--- a/CSS/Grid/grid.css
+++ b/CSS/Grid/grid.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background: #fff9f9
   }
   header, nav, main, sidebar, section, article, footer {
@@ -51,4 +51,118 @@ body {
   footer{
     grid-row: 4/5;
     grid-column: 1/4;
+  } */
+
+
+
+/*
+Utilitza Grid per tal de aquest layout es mostri com el de l'imtage següent: https://moodle.esteveterradas.cat/pluginfile.php/185757/mod_page/content/8/css%20grid%20layout%202.jpg
+
+https://res.cloudinary.com/practicaldev/image/fetch/s--r0GeNTqy--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/lio9zp1fuvq4kj35cn5x.png
+*/
+body {
+  background: #fff9f9
+}
+
+header, nav, main, sidebar, section, article, footer {
+  display: block;
+  border: 1px solid red;
+  background: white;
+  padding: 10px;
+  
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+-ms-border-radius: 5px;
+-o-border-radius: 5px;
+border-radius: 5px;
+background-clip: padding-box
+}
+
+.container{
+  display: grid;
+  max-width: 1200px;
+  margin: auto;
+  grid-gap: 2%;
+  grid-template-columns: 17% 60% 17%;
+}
+
+header{
+  grid-row: 1/2;
+  grid-column: 1/4;
+}
+
+sidebar{
+  grid-row: 2/ span 2;
+  grid-column: 1/2;
+  height: 503px;
+}
+
+main{
+  grid-row: 3/4;
+  grid-column: 2/3;
+  height: 450px;
+}
+
+section{
+  grid-row: 2/5;
+  grid-column: 3/4;
+  height: 503px;
+}
+
+footer{
+  grid-row: 5/6;
+  grid-column: 1/4;
+}
+
+@media only screen and (max-width: 800px) {
+  nav{
+    grid-row: 2/3;
+    grid-column: 1/4;
   }
+
+  main{
+    grid-row: 3/5;
+    grid-column: 2/4;
+  }
+
+  sidebar{
+    grid-row: 3/5;
+    height: auto !important;
+    grid-column: 1/2;
+  }
+
+  section{
+    grid-row: 5/6;
+    grid-column: 1/2;
+    height: auto!important;
+  }
+
+  footer{
+    grid-row: 5/5;
+    grid-column: 2/4;
+    height: auto!important;
+  }
+}
+
+@media only screen and (max-width: 400px){
+  main{
+    grid-row: 3/4;
+    grid-column: 1/4;
+  }
+
+  sidebar{
+    grid-row: 4/5;
+    grid-column: 1/4;
+  }
+
+  section{
+    grid-row: 5/6;
+    grid-column: 1/4;
+  }
+
+  footer{
+    grid-row: 6/7;
+    grid-column: 1/4;
+  }
+
+}
